(fix) breadcrumb is aligned

--- a/src/dashboard/components/Breadcrumb/Breadcrumb.css
+++ b/src/dashboard/components/Breadcrumb/Breadcrumb.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   padding: 0% 2%;
+  flex: 1 1 auto;
 }
 
 .breadcrumb {
