--- a/src/dashboard/components/Header/Header.css
+++ b/src/dashboard/components/Header/Header.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* margin-right: 24px; */
   position: sticky;
   top: 0;
   z-index: 100;
@@ -20,20 +19,14 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-/* .top-bar-left {
-  display: flex;
-  align-items: center;
-  gap: var(--gap-size-2);
-} */
-
 .navbar-logo {
   display: flex;
   align-items: center;
   gap: 0.5rem; /* Optional: space between logo and text */
-  margin-bottom: var(--space-size-0);
+  margin: var(--space-size-0);
   text-decoration: none;
   margin-left: var(--space-size-2);
-  width: 220px;
+  width: var(--navbar-width);
 }
 
 p {
